--- a/src/assets/i18n/zh-cn.json
+++ b/src/assets/i18n/zh-cn.json
@@ -1,4 +1,54 @@
 {
  "button": "按钮组",
- "loading": "加载等待"
+ "loading": "加载等待",
+ "lazyDemo": "懒加载模块",
+ "buttonD": {
+  "name": "按钮组",
+  "title": "按钮用来进行用户操作与交互",
+  "normal": "普通按钮",
+  "cancel": "取消按钮",
+  "add": "添加按钮",
+  "major": "重要按钮",
+  "disable": "禁用按钮",
+  "state": "状态按钮"
+ },
+ "loadD": {
+  "name": "加载等待",
+  "title": "加载等待用于访问初始访问页面的加载等候，以及从后端获取数据的等待处理",
+  "normal": "普通加载中",
+  "cover": "四叶加载中",
+  "horizon": "水平加载等待"
+ },
+ "cambridge": {
+  "title": "再别康桥",
+  "autor": "作者：徐志摩",
+  "text1": "轻轻的我走了，",
+  "text2": "正如我轻轻的来；",
+  "text3": "我轻轻的招手，",
+  "text4": "作别西天的云彩。",
+  "text5": "那河畔的金柳，",
+  "text6": "是夕阳中的新娘；",
+  "text7": "波光里的艳影，",
+  "text8": "在我的心头荡漾。",
+  "text9": "软泥上的青荇，",
+  "text10": "油油的在水底招摇；",
+  "text11": "在康河的柔波里，",
+  "text12": "我甘心做一条水草！",
+  "text13": "那榆荫下的一潭，",
+  "text14": "不是清泉，是天上虹；",
+  "text15": "揉碎在浮藻间，",
+  "text16": "沉淀着彩虹似的梦。",
+  "text17": "寻梦？撑一支长蒿，",
+  "text18": "向青草更青处漫溯；",
+  "text19": "满载一船星辉，",
+  "text20": "在星辉斑斓里放歌。",
+  "text21": "但我不能放歌，",
+  "text22": "悄悄是别离的笙箫；",
+  "text23": "夏虫也为我沉默，",
+  "text24": "沉默是今晚的康桥！",
+  "text25": "悄悄的我走了，",
+  "text26": "正如我悄悄的来；",
+  "text27": "我挥一挥衣袖，",
+  "text28": "不带走一片云彩。"
+ }
 }
